Fixed broken refs

--- a/skysub.tex
+++ b/skysub.tex
@@ -87,7 +87,7 @@ Our surface brightness analysis objective necessitated a regular monitoring of t
 \subsection{2009B Semester} % (fold)
 \label{sub:obs9}
 
-Although we had not developed yet sky offset optimization technology described in \S \ref{ch:dcoffset}, it was apparent that the 2007B data alone would not be sufficient for deep surface photometry of M31. Thus in our 2009B CFHT/WIRCam observing campaign, we set out to perform the \emph{most} exhaustive calibration of M31's NIR surface brightness that could be imagined with a CFHT/WIRCam-class instrument. Our programme was built upon the following axioms:
+Although we had not developed yet sky offset optimization technology described in \S \ref{sec:scalar}, it was apparent that the 2007B data alone would not be sufficient for deep surface photometry of M31. Thus in our 2009B CFHT/WIRCam observing campaign, we set out to perform the \emph{most} exhaustive calibration of M31's NIR surface brightness that could be imagined with a CFHT/WIRCam-class instrument. Our programme was built upon the following axioms:
 
 \begin{enumerate}
     \item \emph{Uncertainty from the temporal variability of the sky must be minimized.} No observation would be delayed by more than 1.5 minutes from a sky sample.
@@ -106,6 +106,7 @@ In their own right, the 2009B sky fields have considerable utility. Over the cou
 % subsection obs9 (end)
 
 \section{Scalar Sky Optimization}
+\label{sec:scalar}
 
 Despite the best intentions of sky-target nodding (\S obs) and median sky image construction (\S reduction), classical NIR sky subtraction on a target as large as M31 is limited by an uncertainty of 1\% of the sky intensity. Classically, the true value of the sky on the disk of M31 is lost by the temporal and spatial variations of skyglow between disk and sky field observations. Here, we demonstrate that the residual sky bias in each observation can be inferred from information in the overlaps of pairs of images in the mosaic.
 
@@ -128,7 +129,7 @@ This algorithm of introducing sky offsets that minimize the differences of all i
 
 \subsection{Hierarchical sky offset optimization}
 
-Sky offset optimization is challenging because of dimensionality. Assuming that sky residuals are \emph{constant} across a frame (see \S TODO for the case of planar residuals), each image frame represents a new dimension (\Delta_i) in the optimization. Considering that the WIRCam array produces four image frames for every exposure, the combined 2007B and 2009B data sets consist of 3924 $J$ and 4972 $K_s$ image frames that cover the disk of M31. Such a large optimization is computationally ambitious, but also needless.
+Sky offset optimization is challenging because of dimensionality. Assuming that sky residuals are \emph{constant} across a frame (see \S TODO for the case of planar residuals), each image frame represents a new dimension ($\Delta_i$) in the optimization. Considering that the WIRCam array produces four image frames for every exposure, the combined 2007B and 2009B data sets consist of 3924 $J$ and 4972 $K_s$ image frames that cover the disk of M31. Such a large optimization is computationally ambitious, but also needless.
 
 Our sky optimization algorithm breaks the optimization of sky offsets into three sequential steps, which we call \emph{hierarchical sky offset optimization}.
 
